Updating TUI and Model To String