@@ -39,7 +39,7 @@ public abstract class CardFactory {
 
     protected JSONObject loadJsonConfig() {
         try {
-            String jsonContent = new String(Files.readAllBytes(new File("src/main/java/it/polimi/ingsw/model/resources/factory.json").toPath()));
+            String jsonContent = new String(getClass().getResourceAsStream("/factory.json").readAllBytes());
             return new JSONObject(jsonContent);
         } catch (IOException e) {
             System.err.println("Errore nel caricamento del file JSON: " + e.getMessage());
